--- a/app/src/debug/res/values/app_name.xml
+++ b/app/src/debug/res/values/app_name.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Config Sample Debug</string>
+    <string name="app_name">Config Debug</string>
 </resources>
